(@bug W-2942175@) update JVM and bk conf files.